@@ -37,7 +37,7 @@ from .exceptions import GcalcliError
 from .gcal import GoogleCalendarInterface
 from .printer import Printer, valid_color_name
 from .validators import (
-    DATETIME_INPUT_DESCRIPTION,
+    get_date_input_description,
     get_input,
     PARSABLE_DATE,
     PARSABLE_DURATION,
@@ -115,11 +115,12 @@ def run_add_prompt(parsed_args, printer):
     if parsed_args.where is None:
         parsed_args.where = get_input(printer, 'Location: ', STR_ALLOW_EMPTY)
     if parsed_args.when is None:
+        date_format_desc = get_date_input_description()
         parsed_args.when = get_input(
             printer,
             'When (? for help): ',
             PARSABLE_DATE,
-            help=f'Expected format: {DATETIME_INPUT_DESCRIPTION}',
+            help=f'Expected format: {date_format_desc}',
         )
     if parsed_args.duration is None and parsed_args.end is None:
         if parsed_args.allday:
