@@ -7,6 +7,7 @@ v4.5.0
     w/ or w/o --config-folder
     - POSSIBLE ACTION REQUIRED: Use `@path/to/gcalclirc` explicitly if it stops
       reading an rc file you needed
+  * Determine date format to use based on system locale's in "When" inputs
   * Respect locally-installed certificates (ajkessel)
   * Re-add a `--noauth_local_server` to provide instructions for authenticating
     from a remote system using port forwarding
